# writeit

./: .gitignore  .pre-commit-config.yaml  .yamllint.yml  AGENT.md  CLAUDE.md  LICENSE  PYTHON_TUI_FRAMEWORK_ANALYSIS.md  README.md  TUI_FRAMEWORK_RECOMMENDATION.md  coverage.json  demo_cli_mode.py  mkdocs.yml  pyproject.toml  pytest-async.ini  pytest.ini  refactor-todo.md  test_cli_integration.py  test_cli_mock.py  test_cli_simple.yaml  test_cqrs_commands.py  test_focus_simple.py  test_llm_integration.py  test_migration.py  test_migration_basic.py  test_migration_comprehensive.py  test_query_handlers.py  test_scrolling_fix.py
.claude/agents/: code-quality.md  doc-owner.md
.github/workflows/: docs.yml  release.yml
.github/workflows-disabled/: tests.yml
docs/: API.md  ARCHITECTURE.md  CONTRIBUTING_DOCS.md  MIGRATION_GUIDE.md  README.md  automation-plan.md  config.yaml
docs/api/: rest-api.md
docs/architecture/: data-models.md  domain-models.md  state-management.md  storage-architecture.md  system-architecture.md
docs/architecture/decisions/: 001-ddd-architecture.md
docs/deployment/: deployment.md
docs/developer/: cli-command-reference.md  configuration-troubleshooting.md  developer-guide.md  getting-started.md
docs/examples/: fastapi_websocket_backend.py  pipeline-examples.md  textual_websocket_example.py
docs/test-complete/markdown/: README.md
docs/test-complete/site/: mkdocs.yml
docs/user/: cli-examples.md  cli-mode.md  installation.md  quickstart.md  shell-completion.md  workspace-management.md
research_examples/: prompt_toolkit_example.py  rich_console_example.py
specs/001-build-me-writeit/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-build-me-writeit/contracts/: api-spec.yaml
src/writeit/: __init__.py  errors.py  logging.py  models.py
src/writeit/application/: __init__.py  di_config.py
src/writeit/cli/: __init__.py  app.py  completion.py  main.py  migrate.py  output.py  pipeline_runner.py
src/writeit/docs/: __init__.py  deployment.py  generator.py  generators.py  html_generator.py  models.py  pdf_generator.py  templates.py  validator.py
src/writeit/domains/: __init__.py
src/writeit/infrastructure/: __init__.py  factory.py
src/writeit/llm/: __init__.py  cache.py  token_usage.py
src/writeit/migration/: __init__.py  cache_format_updater.py  cache_migration_system.py  cache_migrator.py  config_migration_system.py  config_migrator.py  data_migration.py  data_migrator.py  integrated_migration.py  legacy_format_converter.py  main.py  migration_runner.py  migration_validator.py  rollback_manager.py  run_migration.py  workspace_structure_updater.py
src/writeit/models/: __init__.py  pipeline.py
src/writeit/pipeline/: __init__.py  events.py  executor.py
src/writeit/server/: __init__.py  app.py  client.py
src/writeit/shared/: __init__.py  command.py  query.py  repository.py
src/writeit/storage/: __init__.py  adapter.py  manager.py
src/writeit/tui/: __init__.py  configuration_interface.css  configuration_interface.py  modern_entry.py  modern_pipeline_runner.py  pipeline_runner.py  template_browser_editor.py  workspace_switcher.css  workspace_switcher.py
src/writeit/utils/: __init__.py  retry.py
src/writeit/validation/: __init__.py  input_validator.py  pipeline_validator.py  style_validator.py  validation_result.py
src/writeit/workspace/: __init__.py  config.py  migration.py  template_manager.py  workspace.py
styles/: business-executive.yaml  conversational-blog.yaml  technical-expert.yaml
templates/: quick-article.yaml  tech-article.yaml
tests/: README.md  __init__.py  conftest.py  test_domain_fixtures.py  test_mock_functionality.py  test_mock_imports.py  test_pytest_config.py  test_simple_async.py
tests/builders/: __init__.py  content_builders.py  execution_builders.py  pipeline_builders.py  value_object_builders.py  workspace_builders.py
tests/contract/: README.md  __init__.py  test_cli_contract.py  test_cli_outputs_contract.py  test_contract_patterns.py  test_rest_api_contract.py  test_template_style_cli_contract.py  test_tui_flows_contract.py  test_websocket_contract.py
tests/documentation/: __init__.py  test_deployment.py  test_extractors.py  test_generator.py  test_templates.py  test_validator.py
tests/fixtures/: __init__.py  content.py  execution.py  mock_repositories.py  mock_services.py  pipeline.py  value_objects.py  workspace.py
tests/integration/: __init__.py  test_command_handlers.py  test_comprehensive_repository_persistence.py  test_core_repository_integration.py  test_filesystem_integration.py  test_llm_integration.py  test_lmdb_basic_persistence.py  test_lmdb_persistence_core.py  test_migration.py  test_minimal_lmdb_integration.py  test_pipeline_execution.py  test_repository_integration.py  test_repository_registration.py  test_scrolling_fix.py  test_service_integration.py  test_simple_repository_integration.py  test_template_commands_integration.py  test_use_case_workflows.py  test_validation_integration.py  test_workspace_integration.py
tests/integration/migration/: test_migration_system.py
tests/migration/: test_migration_integration.py
tests/mocks/: __init__.py  base_mock_repository.py
tests/performance/: __init__.py  test_advanced_load_testing.py  test_comprehensive_performance_benchmarks.py  test_concurrent_execution.py  test_high_concurrency_execution.py  test_lmdb_performance.py  test_memory_profiling.py  test_multi_workspace_performance.py  test_performance_framework.py  test_pipeline_performance.py
tests/unit/: __init__.py  test_config.py  test_data_migration.py  test_mock_repositories.py  test_storage.py  test_template_manager.py  test_token_usage.py  test_tui_headless.py  test_workspace.py
tests/use_cases/: __init__.py  test_error_recovery_scenarios.py  test_pipeline_execution_flows.py  test_real_pipeline_execution_flows.py  test_template_operations.py  test_workspace_management_scenarios.py
tests/utils/: __init__.py  async_helpers.py  domain_fixtures.py  event_testing.py  mock_factories.py  storage_helpers.py  workspace_helpers.py
(+361 files in other folders)
